--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "nodejsapp",
   "version": "1.0.0",
-  "description": "Very simple node app",
+  "description": "Node.js API",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
   "author": "Georgina Neilson",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "nodemon": "^1.18.9"
   }
